# rust-practice

./: .env  .gitignore  README.md  diesel.toml
actix_demo/one/: Cargo.toml
actix_demo/one_half/: Cargo.toml
actix_demo/one_half/src/: main.rs
actix_demo/one_half/static/: 404.html  welcome.html
actix_demo/three/: Cargo.toml  README.md  diesel.toml
actix_demo/three/migrations/2024-07-09-122028_users/: up.sql
actix_demo/three/migrations/2024-07-09-122031_posts/: up.sql
actix_demo/three/src/: main.rs  schema.rs
actix_demo/three/src/db_operations/: db.rs  mod.rs
actix_demo/three/src/models/: mod.rs  posts.rs  users.rs
actix_demo/two/: Cargo.toml  README.md
blog_app/design/: README.md
blog_app/src/: main.rs  schema.rs
blog_app/templates/: dashboard.html  index.html  login.html  register.html
blog_app_complete/: Cargo.toml
blog_app_complete/migrations/2024-07-18-112008_posts/: up.sql
blog_app_complete/migrations/2024-07-18-112023_comments/: up.sql
blog_app_complete/src/controllers/: mod.rs
blog_app_complete/src/models/: users.rs
blog_app_complete/templates/: home.html  index.html  register.html
contract-and-js/: Scarb.toml
contract-and-js/tests/: test_contract.cairo
contract-and-js/web-app/: README.md  package-lock.json  package.json
diesel_demo/one/: Cargo.toml  diesel.toml
migrations/2024-07-18-112004_users/: up.sql
migrations/2024-07-18-112023_comments/: down.sql
rust_etherium/: readme.md
rust_etherium/one/: Cargo.toml
rust_etherium/two/: Cargo.toml  README.md
sample_db_1/: Cargo.toml  diesel.toml
sample_db_1/src/: main.rs  schema.rs
src/: main.rs  schema.rs
src/controllers/: dashboard.rs  home.rs  (+2 more)
templates/: login.html  posts.html  posts_create.html
(+43 files in other folders)
