[package]
name = "actix_demo_three"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.1", features = ["postgres","chrono"] }
dotenvy = "0.15"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11.3"
log = "0.4.22"
